--- a/style/index.css
+++ b/style/index.css
@@ -1,1 +1,101 @@
-/* Add CSS styling here */
+/* CSS Reset */
+*{
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    max-width: 100%;
+    border: 1px solid black;
+}
+
+/* Sizing and spacing text */
+html{
+    font-size: 62.5%;
+    background-color: #F7EFFF;
+}
+
+body{
+    font-size: 1.8rem;
+    color: #212F3C;
+}
+
+h1, h2, h3, p{
+    text-align: center;
+    letter-spacing: 1.5px;
+}
+
+h1{
+    font-size: 5rem;
+}
+
+h2{
+    font-size: 3.5rem;
+}
+
+h3{
+    font-size: 2.25rem;
+}
+
+p{
+    font-size:2rem;
+}
+
+/* Header Section */
+nav{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    background-color: rgb(99, 74, 109);
+    color: whitesmoke;
+    padding: 2% 2%;
+}
+
+.top {
+    width:100%;
+    position: fixed;
+}
+
+.name{
+    width: 70%;
+    display:flex;
+    justify-content:flex-start;
+}
+
+.buttons{
+    width: 30%;
+    display:flex;
+    justify-content: space-evenly;
+    align-items: space-evenly;
+    color: whitesmoke;
+}
+
+a {
+    padding: 2%;
+}
+
+/* Top Section */
+#name{
+    padding: 20% 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+/* Project Section */
+
+
+/* Footer */
+
+.bottom{
+    width:100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.btm-btn{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
