--- a/style/index.css
+++ b/style/index.css
@@ -41,6 +41,15 @@ p{
     font-size:2.5rem;
 }
 
+.linkdin p{
+    font-size: 1.6rem;
+}
+
+a{
+    text-decoration: none;
+    color: whitesmoke;
+}
+
 /* Header Section */
 nav{
     display: flex;
@@ -48,7 +57,7 @@ nav{
     width: 100%;
     background-color: rgb(99, 74, 109);
     color: whitesmoke;
-    padding: 2% 2%;
+    padding: 1% 2%;
 }
 
 .top {
@@ -57,21 +66,31 @@ nav{
 }
 
 .name{
-    width: 70%;
+    width: 60%;
     display:flex;
     justify-content:flex-start;
 }
 
 .buttons{
-    width: 30%;
+    width: 40%;
     display:flex;
     justify-content: space-evenly;
     align-items: space-evenly;
     color: whitesmoke;
+    padding: 1% 0;
 }
 
-a {
-    padding: 2%;
+.buttons a, .btm-btn a {
+    padding: 2% 4%;
+    transition: 3s;
+    border: 2px solid #150bd3;
+    border-radius: 25%;
+    background-color: #150bd3;
+}
+
+.buttons a:hover, .btm-btn a:hover{
+    background-color: #F7EFFF;
+    color: #212F3C;
 }
 
 /* Top Section */
@@ -105,8 +124,12 @@ a {
     margin:1%;
 }
 
-.text{
+.text {
     height:10vh;
+}
+
+.text h3 a{
+    color: #212F3C;
 }
 
 .island,
@@ -123,37 +146,63 @@ a {
 }
 
 .bakery{
-    background-image: url(../images/building-w:-patio.jpeg);
+    background-image: url('../images/building-w:-patio.jpeg');
 }
 
 .tree {
-    background-image: url(../images/tree.jpeg);
+    background-image: url('../images/tree.jpeg');
 }
 
 .travel {
-    background-image: url(../images/sunset-top-buildings.jpeg);
+    background-image: url('../images/sunset-top-buildings.jpeg');
 }
 
 .book{
-    background-image: url(../images/book.jpeg);
+    background-image: url('../images/book.jpeg');
 }
 
 .plant{
-    background-image: url(../images/pink-flowers.jpeg);
+    background-image: url('../images/pink-flowers.jpeg');
 }
 
 /* Footer */
-
-.bottom{
+footer {
     width:100%;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    background-color: rgb(99, 74, 109);
+    padding: 2%;
 }
 
 .btm-btn{
     display:flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-end;
+    align-items: center; 
     text-align: center;
+    width:50%;
+}
+
+.btm-btn a{
+    width: 100%;
+    justify-content: flex-end;
+}
+
+.linkdin {
+    display: flex;
+    align-items: flex-start;
+    width: 50%;
+}
+
+.linkdin p{
+    padding-right: 1%;
+}
+
+.linkdin a{
+    display:flex;
+    background-image: url('../images/LI-Logo.png');
+    width: 15%;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    height:100%;
+    align-items: center;
+    justify-content: center;
 }
