--- a/style/index.css
+++ b/style/index.css
@@ -18,7 +18,7 @@ body{
     color: #212F3C;
 }
 
-h1, h2, h3, p{
+h1, h2, h3, p, a{
     text-align: center;
     letter-spacing: 1.5px;
 }
@@ -50,6 +50,10 @@ a{
     color: whitesmoke;
 }
 
+.btm-btn a{
+    font-size: 1.4rem;
+}
+
 /* Header Section */
 nav{
     display: flex;
@@ -66,7 +70,7 @@ nav{
 }
 
 .name{
-    width: 60%;
+    width: 45%;
     display:flex;
     justify-content:flex-start;
 }
@@ -77,7 +81,7 @@ nav{
 - possibly different transition/animation
 */
 .buttons{
-    width: 40%;
+    width: 60%;
     display:flex;
     justify-content: space-evenly;
     align-items: space-evenly;
@@ -86,11 +90,11 @@ nav{
 }
 
 .buttons a, .btm-btn a {
-    padding: 2% 4%;
+    padding: 1% 2%;
     transition: 3s;
-    border: 2px solid #150bd3;
-    border-radius: 25%;
-    background-color: #150bd3;
+    border: 2px solid #322d99;
+    border-radius: 20%;
+    background-color: #322d99;
 }
 
 .buttons a:hover, .btm-btn a:hover{
@@ -174,24 +178,9 @@ nav{
 footer {
     width:100%;
     display: flex;
+    flex-wrap: wrap;
     background-color: rgb(99, 74, 109);
     padding: 2%;
-}
-
-/* Contact Button:
-- fix size of button
- */
-.btm-btn{
-    display:flex;
-    justify-content: flex-end;
-    align-items: center; 
-    text-align: center;
-    width:50%;
-}
-
-.btm-btn a{
-    width: 100%;
-    justify-content: flex-end;
 }
 
 /* LinkedIn Logo:
@@ -202,7 +191,9 @@ footer {
 .linkdin {
     display: flex;
     align-items: flex-start;
-    width: 50%;
+    justify-content: center;
+    width: 100%;
+    height: 5vh;
 }
 
 .linkdin p{
@@ -220,9 +211,38 @@ footer {
     justify-content: center;
 }
 
+/* Contact Button:
+- fix size of button
+ */
+.btm-btn {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.btm-btn a {
+    width: 15%;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
 /* Responsive Design */
-/* 800px or less */
-@media(max-width: 800px){
+/* 860px or less */
+@media(max-width: 860px){
+    nav{
+        flex-wrap:wrap;
+    }
+    .name{
+        width:100%;
+        justify-content: center;
+    }
+    .buttons{
+        width: 100%;
+    }
+    #name{
+        padding-top:25%;
+    }
     
 }
 
