--- a/style/index.css
+++ b/style/index.css
@@ -4,7 +4,7 @@
     padding: 0;
     margin: 0;
     max-width: 100%;
-    /* border: 1px solid black; */
+    border: 1px solid black;
 }
 
 /* Sizing and spacing text */
@@ -51,7 +51,7 @@ a{
 }
 
 .btm-btn a{
-    font-size: 1.4rem;
+    font-size: 1.6rem;
 }
 
 /* Header Section */
@@ -75,24 +75,18 @@ nav{
     justify-content:flex-start;
 }
 
-/* Buttons:
-- sizing weirdly when expanding/decompressing browser 
-- want to round them better
-- possibly different transition/animation
-*/
 .buttons{
     width: 60%;
     display:flex;
     justify-content: space-evenly;
     align-items: space-evenly;
     color: whitesmoke;
-    padding: 1% 0;
 }
 
 .buttons a, .btm-btn a {
     padding: 1% 2%;
     transition: 3s;
-    border: 2px solid #322d99;
+    border: 4px solid #322d99;
     border-radius: 20%;
     background-color: #322d99;
 }
@@ -133,103 +127,78 @@ nav{
     margin:1%;
 }
 
-.text {
-    height:10vh;
-}
-
-.text h3 a{
-    color: #212F3C;
-}
-
 .island,
 .bakery,
 .tree,
 .travel,
 .book,
 .plant {
-    height: 50vh;
+    max-height: 400px;
 }
 
-.island {
-    background-image: url('../images/island.jpeg');
+.text h3 a{
+    color: #212F3C;
 }
 
-.bakery{
-    background-image: url('../images/building-w:-patio.jpeg');
-}
-
-.tree {
-    background-image: url('../images/tree.jpeg');
-}
-
-.travel {
-    background-image: url('../images/sunset-top-buildings.jpeg');
-}
-
-.book{
-    background-image: url('../images/book.jpeg');
-}
-
-.plant{
-    background-image: url('../images/pink-flowers.jpeg');
+.island img,
+.bakery img,
+.tree img,
+.travel img,
+.book img,
+.plant img {
+    width: 100%;
+    height: 100%;
 }
 
 /* Footer */
 footer {
     width:100%;
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
     background-color: rgb(99, 74, 109);
     padding: 2%;
 }
 
-/* LinkedIn Logo:
-- possibly different color
-- fix div(?) that it's inside 
-- possibly tranisition/animation for it
- */
 .linkdin {
     display: flex;
-    align-items: flex-start;
     justify-content: center;
     width: 100%;
-    height: 5vh;
+    height: 4vh;
 }
 
 .linkdin p{
     padding-right: 1%;
+    height:100%;
+    display: flex;
+    align-items: center;
 }
 
-.linkdin a{
+.linkdin a, .linkdin img{
     display:flex;
-    background-image: url('../images/LI-Logo.png');
-    width: 15%;
-    background-repeat: no-repeat;
-    background-size: 100%;
-    height:100%;
+    height: 100%;
     align-items: center;
     justify-content: center;
 }
 
-/* Contact Button:
-- fix size of button
- */
 .btm-btn {
     display: flex;
     justify-content: center;
-    width: 100%;
+    width: 30%;
+    padding-top: 1%;
 }
 
 .btm-btn a {
-    width: 15%;
-    justify-content: center;
-    align-items: center;
     text-align: center;
 }
 
 /* Responsive Design */
 /* 860px or less */
 @media(max-width: 860px){
+    html{
+        font-size: 50%;
+    }
     nav{
         flex-wrap:wrap;
     }
@@ -243,7 +212,76 @@ footer {
     #name{
         padding-top:25%;
     }
-    
+    .island,
+    .bakery,
+    .tree,
+    .travel,
+    .book,
+    .plant {
+        height: 25vh;
+    }
 }
 
 /* 500px or less */
+@media(max-width: 500px){
+    html{
+        font-size: 40%;
+    }
+    .buttons{
+        margin: auto 40%;
+        flex-wrap:wrap;
+    }
+    .buttons a, .btm-btn a{
+        margin: 3% auto;
+        padding: 2% 4%;
+    }
+    #name{
+        padding-top: 50%;
+    }
+    .text,
+    .island,
+    .bakery,
+    .tree,
+    .travel,
+    .book,
+    .plant {
+        margin: 1% 1.75%;
+        width:45%;
+    }
+    .one{
+        order:1;
+    }
+    .two{
+        order:2;
+    }
+    .three{
+        order:3;
+    }
+    .four{
+        order:4;
+    }
+    .five{
+        order:5;
+    }
+    .six{
+        order:6;
+    }
+    .seven{
+        order:7;
+    }
+    .eight{
+        order:8;
+    }
+    .nine{
+        order:9;
+    }
+    .ten{
+        order:10;
+    }
+    .eleven{
+        order:11;
+    }
+    .twelve{
+        order:12;
+    }
+}
